# Docker-LEMP

./: CMakeLists.txt  README.md  install  uninstall  update
cbin/: create-project  doco  init-doco  mysql-import
command/: test.cpp
images/mail/: Dockerfile
images/nginx/: Dockerfile  entrypoint
images/nginx/include/: magento.conf  nginx.conf
images/node/: Dockerfile
images/php/: 70.Dockerfile  72.Dockerfile  74.Dockerfile  80.Dockerfile  Dockerfile  entrypoint  old.Dockerfile
images/php/ini/: z-xdebug3.ini
images/ssh/: Dockerfile  entrypoint
images/varnish/: Dockerfile  entrypoint
init/: .env  docker-compose.build.yml  docker-compose.yml
