cmake_minimum_required(VERSION 3.27)
project(LEMP)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/cbin")

add_executable(clean-docker-container command/build/clean-docker-container.cpp)
add_executable(clean-docker-image command/build/clean-docker-image.cpp)
add_executable(clean-docker-volume command/build/clean-docker-volume.cpp)
add_executable(composer command/build/composer.cpp)
add_executable(create-project command/build/create-project.cpp)
add_executable(doco command/build/doco.cpp)
add_executable(init-doco command/build/init-doco.cpp)
add_executable(init-magento-env command/build/init-magento-env.cpp)
add_executable(magento command/build/magento.cpp)
add_executable(magento-patch command/build/magento-patch.cpp)
add_executable(mysql-export command/build/mysql-export.cpp)
add_executable(mysql-import command/build/mysql-import.cpp)
add_executable(n98 command/build/n98.cpp)
add_executable(pconfig command/build/pconfig.cpp)
add_executable(permission command/build/permission.cpp)
add_executable(php command/build/php.cpp)
add_executable(php-disable command/build/php-disable.cpp)
add_executable(php-enable command/build/php-enable.cpp)
add_executable(php-service command/build/php-service.cpp)
add_executable(ppool command/build/ppool.cpp)
add_executable(redis-cli command/build/redis-cli.cpp)
